--- a/AssistOnboarding/Cells/OnboardingCell.xib
+++ b/AssistOnboarding/Cells/OnboardingCell.xib
@@ -3,64 +3,69 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OnboardingCell" customModule="AssistOnboarding" customModuleProvider="target">
-            <connections>
-                <outlet property="illustrationImage" destination="NZP-Ac-Dot" id="W4s-7B-LhW"/>
-                <outlet property="mainLabel" destination="r73-f7-84v" id="4Fv-PH-Y4l"/>
-                <outlet property="secondaryLabel" destination="3Hk-iy-jLj" id="emp-vb-RQE"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="ROG-n3-WPT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="626"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingCell" id="Vrr-Fb-OhR" customClass="OnboardingCell" customModule="AssistOnboarding" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="426" height="733"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OnboardingIllustration0" translatesAutoresizingMaskIntoConstraints="NO" id="NZP-Ac-Dot">
-                    <rect key="frame" x="24" y="100" width="345" height="343"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="NZP-Ac-Dot" secondAttribute="height" multiplier="306:343" id="jFN-TK-g9e"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r73-f7-84v">
-                    <rect key="frame" x="24" y="477" width="345" height="62.333333333333371"/>
-                    <string key="text">Your Personal
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7gG-T7-MpM">
+                <rect key="frame" x="0.0" y="0.0" width="426" height="733"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OnboardingIllustration0" translatesAutoresizingMaskIntoConstraints="NO" id="NZP-Ac-Dot">
+                        <rect key="frame" x="24" y="43" width="378" height="423.66666666666669"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="NZP-Ac-Dot" secondAttribute="height" multiplier="306:343" id="jFN-TK-g9e"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r73-f7-84v">
+                        <rect key="frame" x="24" y="486.66666666666669" width="378" height="62.333333333333314"/>
+                        <string key="text">Your Personal
 Assistant</string>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Hk-iy-jLj">
-                    <rect key="frame" x="24" y="555.33333333333337" width="345" height="40.666666666666629"/>
-                    <string key="text">Simplify your life
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Hk-iy-jLj">
+                        <rect key="frame" x="24" y="565" width="378" height="40.666666666666629"/>
+                        <string key="text">Simplify your life
 with an AI companion</string>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <viewLayoutGuide key="safeArea" id="GW9-Kh-jf5"/>
-            <color key="backgroundColor" red="0.015686274509803921" green="0.35686274509803922" blue="0.60392156862745094" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="r73-f7-84v" firstAttribute="leading" secondItem="NZP-Ac-Dot" secondAttribute="leading" id="4fl-KA-Iq8"/>
-                <constraint firstItem="NZP-Ac-Dot" firstAttribute="top" secondItem="ROG-n3-WPT" secondAttribute="top" constant="100" id="58A-k8-y1k"/>
-                <constraint firstItem="r73-f7-84v" firstAttribute="top" secondItem="NZP-Ac-Dot" secondAttribute="bottom" constant="34" id="C0Z-dR-JXG"/>
-                <constraint firstItem="3Hk-iy-jLj" firstAttribute="top" secondItem="r73-f7-84v" secondAttribute="bottom" constant="16" id="Dp0-i5-Hti"/>
-                <constraint firstItem="r73-f7-84v" firstAttribute="trailing" secondItem="NZP-Ac-Dot" secondAttribute="trailing" id="WQ1-AA-Knd"/>
-                <constraint firstItem="GW9-Kh-jf5" firstAttribute="trailing" secondItem="NZP-Ac-Dot" secondAttribute="trailing" constant="24" id="hFo-NR-0eu"/>
-                <constraint firstItem="NZP-Ac-Dot" firstAttribute="leading" secondItem="GW9-Kh-jf5" secondAttribute="leading" constant="24" id="jfs-zO-1jw"/>
-                <constraint firstAttribute="bottom" secondItem="3Hk-iy-jLj" secondAttribute="bottom" constant="100" id="lwK-Ci-cjM"/>
-                <constraint firstItem="3Hk-iy-jLj" firstAttribute="leading" secondItem="r73-f7-84v" secondAttribute="leading" id="sGy-nL-Oar"/>
-                <constraint firstItem="3Hk-iy-jLj" firstAttribute="trailing" secondItem="r73-f7-84v" secondAttribute="trailing" id="w6H-GT-eJa"/>
-            </constraints>
-            <nil key="simulatedTopBarMetrics"/>
-            <nil key="simulatedBottomBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="55.725190839694655" y="29.577464788732396"/>
-        </view>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" red="0.015686274509803921" green="0.35686274509803922" blue="0.60392156862745094" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="r73-f7-84v" firstAttribute="trailing" secondItem="NZP-Ac-Dot" secondAttribute="trailing" id="6bj-Td-cqb"/>
+                    <constraint firstItem="3Hk-iy-jLj" firstAttribute="trailing" secondItem="r73-f7-84v" secondAttribute="trailing" id="BHj-wn-y8N"/>
+                    <constraint firstItem="r73-f7-84v" firstAttribute="leading" secondItem="NZP-Ac-Dot" secondAttribute="leading" id="Mhw-lH-5Hr"/>
+                    <constraint firstAttribute="bottom" secondItem="3Hk-iy-jLj" secondAttribute="bottom" priority="250" constant="100" id="XeE-tC-fzj"/>
+                    <constraint firstItem="3Hk-iy-jLj" firstAttribute="top" secondItem="r73-f7-84v" secondAttribute="bottom" constant="16" id="YBU-fi-Eri"/>
+                    <constraint firstItem="r73-f7-84v" firstAttribute="top" secondItem="NZP-Ac-Dot" secondAttribute="bottom" constant="20" id="Z2e-t0-i0T"/>
+                    <constraint firstItem="3Hk-iy-jLj" firstAttribute="leading" secondItem="r73-f7-84v" secondAttribute="leading" id="ZKc-Qo-9xI"/>
+                    <constraint firstItem="NZP-Ac-Dot" firstAttribute="leading" secondItem="7gG-T7-MpM" secondAttribute="leading" constant="24" id="d29-5j-AZH"/>
+                    <constraint firstItem="NZP-Ac-Dot" firstAttribute="top" secondItem="7gG-T7-MpM" secondAttribute="top" constant="43" id="rj9-g2-qiN"/>
+                    <constraint firstAttribute="trailing" secondItem="NZP-Ac-Dot" secondAttribute="trailing" constant="24" id="uHl-3H-sd5"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="426" height="733"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                    <integer key="value" value="20"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="illustrationImage" destination="NZP-Ac-Dot" id="8Av-SB-gMi"/>
+                <outlet property="mainLabel" destination="r73-f7-84v" id="kFE-k1-Tke"/>
+                <outlet property="secondaryLabel" destination="3Hk-iy-jLj" id="iYB-EM-4kP"/>
+            </connections>
+            <point key="canvasLocation" x="-694.6564885496183" y="67.25352112676056"/>
+        </collectionViewCell>
     </objects>
     <resources>
         <image name="OnboardingIllustration0" width="306" height="343"/>
