--- a/AssistOnboarding/Screens/OnboardingScreen.xib
+++ b/AssistOnboarding/Screens/OnboardingScreen.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OnboardingViewController" customModule="AssistOnboarding" customModuleProvider="target">
             <connections>
+                <outlet property="onboardingButton" destination="x1e-wn-Cpn" id="vaf-uT-krV"/>
                 <outlet property="onboardingCollectionView" destination="j3e-a6-jj9" id="Hth-oG-Oxd"/>
                 <outlet property="onboardingPageControl" destination="z9c-Bk-0Nv" id="A3m-sO-egS"/>
                 <outlet property="termsTextView" destination="W1g-jl-k6E" id="b4r-Ed-eDw"/>
@@ -38,9 +39,8 @@
                         <outlet property="delegate" destination="-1" id="gst-dm-qNO"/>
                     </connections>
                 </collectionView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1e-wn-Cpn">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1e-wn-Cpn" customClass="OnboardingButton" customModule="AssistOnboarding" customModuleProvider="target">
                     <rect key="frame" x="31" y="709" width="331" height="56"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="56" id="qB6-19-eso"/>
                     </constraints>
@@ -50,11 +50,9 @@
                     <state key="normal" title="Continue">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="28"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
+                    <state key="highlighted">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                     <connections>
                         <action selector="continueButton:" destination="-1" eventType="touchUpInside" id="DH8-rv-91O"/>
                     </connections>
