--- a/AssistOnboarding/Cells/OnboardingCell.xib
+++ b/AssistOnboarding/Cells/OnboardingCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +23,7 @@
                             <constraint firstAttribute="width" secondItem="NZP-Ac-Dot" secondAttribute="height" multiplier="306:343" id="jFN-TK-g9e"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r73-f7-84v">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="r73-f7-84v">
                         <rect key="frame" x="24" y="486.66666666666669" width="378" height="62.333333333333314"/>
                         <string key="text">Your Personal
 Assistant</string>
@@ -30,7 +31,7 @@ Assistant</string>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Hk-iy-jLj">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="3Hk-iy-jLj">
                         <rect key="frame" x="24" y="565" width="378" height="40.666666666666629"/>
                         <string key="text">Simplify your life
 with an AI companion</string>
@@ -49,7 +50,13 @@ with an AI companion</string>
                     <constraint firstItem="r73-f7-84v" firstAttribute="top" secondItem="NZP-Ac-Dot" secondAttribute="bottom" constant="20" id="Z2e-t0-i0T"/>
                     <constraint firstItem="3Hk-iy-jLj" firstAttribute="leading" secondItem="r73-f7-84v" secondAttribute="leading" id="ZKc-Qo-9xI"/>
                     <constraint firstItem="NZP-Ac-Dot" firstAttribute="leading" secondItem="7gG-T7-MpM" secondAttribute="leading" constant="24" id="d29-5j-AZH"/>
-                    <constraint firstItem="NZP-Ac-Dot" firstAttribute="top" secondItem="7gG-T7-MpM" secondAttribute="top" constant="43" id="rj9-g2-qiN"/>
+                    <constraint firstItem="NZP-Ac-Dot" firstAttribute="top" secondItem="7gG-T7-MpM" secondAttribute="top" constant="43" id="rj9-g2-qiN" customClass="AdaptiveLayoutConstraint" customModule="AssistOnboarding" customModuleProvider="target">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="constant4and7inch">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </constraint>
                     <constraint firstAttribute="trailing" secondItem="NZP-Ac-Dot" secondAttribute="trailing" constant="24" id="uHl-3H-sd5"/>
                 </constraints>
             </collectionViewCellContentView>
