--- a/AssistOnboarding/Screens/OnboardingScreen.xib
+++ b/AssistOnboarding/Screens/OnboardingScreen.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -81,9 +82,6 @@
                         <constraint firstAttribute="height" constant="4" id="rRr-Na-GRX"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="numberOfPage">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="currentPage">
                             <integer key="value" value="0"/>
                         </userDefinedRuntimeAttribute>
@@ -93,7 +91,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ku2-Ht-2D7">
-                    <rect key="frame" x="17" y="51" width="114" height="29"/>
+                    <rect key="frame" x="17" y="56" width="114" height="29"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Restore Purchase">
@@ -104,7 +102,7 @@
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qad-8I-g4b">
-                    <rect key="frame" x="354" y="57" width="18" height="18"/>
+                    <rect key="frame" x="354" y="62" width="18" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="18" id="JsX-Y9-Cwy"/>
                         <constraint firstAttribute="height" constant="18" id="Y1H-s8-VUn"/>
@@ -133,9 +131,9 @@
                 <constraint firstItem="j3e-a6-jj9" firstAttribute="leading" secondItem="fkg-0a-KAX" secondAttribute="leading" id="BNe-jt-Cbn"/>
                 <constraint firstItem="W1g-jl-k6E" firstAttribute="bottom" secondItem="fkg-0a-KAX" secondAttribute="bottom" id="DW1-n2-Ai7"/>
                 <constraint firstItem="gQb-9A-Wqf" firstAttribute="top" secondItem="lAO-lu-08j" secondAttribute="top" id="DZU-gv-ahk"/>
-                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="lAO-lu-08j" secondAttribute="top" constant="100" id="IFq-DJ-Whk"/>
+                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="fkg-0a-KAX" secondAttribute="top" constant="41" id="IFq-DJ-Whk"/>
                 <constraint firstAttribute="trailing" secondItem="gQb-9A-Wqf" secondAttribute="trailing" id="L1w-91-Q1E"/>
-                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="Ku2-Ht-2D7" secondAttribute="bottom" constant="20" id="UZn-iM-usb"/>
+                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="Ku2-Ht-2D7" secondAttribute="bottom" constant="15" id="UZn-iM-usb"/>
                 <constraint firstItem="z9c-Bk-0Nv" firstAttribute="centerX" secondItem="lAO-lu-08j" secondAttribute="centerX" id="Ydy-1h-4Ps"/>
                 <constraint firstItem="gQb-9A-Wqf" firstAttribute="leading" secondItem="lAO-lu-08j" secondAttribute="leading" id="hQb-Aq-g20"/>
                 <constraint firstItem="x1e-wn-Cpn" firstAttribute="leading" secondItem="fkg-0a-KAX" secondAttribute="leading" constant="31" id="hUp-Wl-iTg"/>
@@ -144,7 +142,7 @@
                 <constraint firstItem="W1g-jl-k6E" firstAttribute="firstBaseline" secondItem="x1e-wn-Cpn" secondAttribute="bottom" constant="15" id="lbJ-DH-27d"/>
                 <constraint firstItem="fkg-0a-KAX" firstAttribute="trailing" secondItem="j3e-a6-jj9" secondAttribute="trailing" id="m9D-mm-Pyv"/>
                 <constraint firstItem="z9c-Bk-0Nv" firstAttribute="top" secondItem="x1e-wn-Cpn" secondAttribute="bottom" constant="32" id="nHQ-Dm-lnf"/>
-                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="qad-8I-g4b" secondAttribute="bottom" constant="25" id="tdf-xP-dBG"/>
+                <constraint firstItem="j3e-a6-jj9" firstAttribute="top" secondItem="qad-8I-g4b" secondAttribute="bottom" constant="20" id="tdf-xP-dBG"/>
             </constraints>
             <point key="canvasLocation" x="-436" y="-115"/>
         </view>
